Navbar incorporation across all pages

--- a/AboutUs.html
+++ b/AboutUs.html
@@ -3,6 +3,7 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <link rel="stylesheet" href="navbar.css" />
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
@@ -27,33 +28,9 @@
    .webname{
      font-family: serif;
      font-size: 40px;
-
-    margin-bottom: 0px
-
+     margin-bottom: 0px
    }
-   .navbtn{
-     outline: none;
-     margin-left:100px;
-     margin-top: 15px;
-     font-size: 20px;
-     position: absolute; right:60; bottom: 4px;
-    font-family:serif;
-     outline: none;}
-     .navbtn:hover{font-size: 25px;}
-   }
-   .navbar{
-     outline: none;
-     border: none;
-     position: fixed;
-
-   }
-   .navbar-brand{
-     font-size: 25px;
-     font-family:serif;
-      margin-top: 14px;
-      margin-left: 14px;
-
-   }
+  
 
 
 body, html {
@@ -188,22 +165,20 @@ html {
 </head>
 <body>
 
-<nav id= "nav">
-<nav class="navbar navbar-inverse">
- <div class="container-fluid">
-   <div class="navbar-header" >
-     <a class="navbar-brand" href="#" stlye="position:fixed" >Home</a>
-   </div>
-   <ul class="nav navbar-nav" stlye="position:fixed" >
-     <li class="navbtn"><a href="./issues/gwcindex.html">Climate Change</a></li>
-     <li class="navbtn"><a href="./googleapi.html">Google API</a></li>
-     <li class="navbtn"><a href="./donate.html">Donate</a></li>
-     <li class="navbtn"><a href="./blog.hbs">Blog</a></li>
-     <li class="navbtn"><a href="./AboutUs.html">Meet The Team</a></li>
-   </ul>
- </div>
-</nav>
-</nav>
+  <nav id= "nav">
+    <nav class="navbar navbar-inverse">
+      <div class="container-fluid nav-center">
+        <ul class="nav navbar-nav">
+          <li class="navbtn"><a href="./finalproject.html">Home</a></li>
+          <li class="navbtn"><a href="../gwcindex.html">The Issue</a></li>
+          <li class="navbtn"><a href="./googleapi.html">Places Affected</a></li>
+          <li class="navbtn"><a href="./donate.html">Donate</a></li>
+          <li class="navbtn"><a href="./">Blog</a></li>
+          <li class="navbtn"><a href="./AboutUs.html">Meet the Team</a></li>
+        </ul>
+      </div>
+    </nav>
+  </nav>
 
 
 <h2> <center> Meet the Team </center> </h2>
@@ -225,7 +200,7 @@ html {
       <div class="container2">
         <h2>Shreya Barua</h2>
         <p class="title">Clarkston High School</p>
-        <p>I am 17 years old and I am currently a rising senior. I really enjoy teaching, cooking and coding. I applied to Girls Who Code because I took a coding class in school and I didnt like it very much. The class consisted of only guys so I thought that changing my surroundings might make the difference. Now that I am a part of a program with more girls I can say that I am definitely more engaged, interested and involved.</p> 
+        <p>I am 17 years old and I am currently a rising senior. I really enjoy teaching, cooking and coding. I applied to Girls Who Code because I took a coding class in school and I didnt like it very much. The class consisted of only guys so I thought that changing my surroundings might make the difference. Now that I am a part of a program with more girls I can say that I am definitely more engaged, interested and involved.</p>
         <div class="container2">
         <p> Contact Me: shreyabarua2@gmail.com </p>
         <script type="text/javascript"></script>
@@ -285,7 +260,7 @@ html {
   </div>
   </div>
   </div>
- 
+
 
 
 
@@ -316,5 +291,3 @@ html {
 
 </body>
 </html>
-
-
