--- a/issues/gwcindex.html
+++ b/issues/gwcindex.html
@@ -13,18 +13,20 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
+
   </head>
   <body  id= "BG">
     <nav id= "nav">
       <nav class="navbar navbar-inverse">
         <div class="container-fluid nav-center">
           <ul class="nav navbar-nav">
-            <li class="navbtn"><a href="../finalproject.html">Home</a></li>
-            <li class="navbtn"><a href="./gwcindex.html">Climate Change</a></li>
-            <li class="navbtn"><a href="../googleapi.html">Google API</a></li>
-            <li class="navbtn"><a href="../donate.html">Donate</a></li>
-            <li class="navbtn"><a href="../">Blog</a></li>
-            <li class="navbtn"><a href="../AboutUs.html">Meet the Team</a></li>
+            <li class="navbtn"><a href="./finalproject.html">Home</a></li>
+            <li class="navbtn"><a href="../gwcindex.html">The Issue</a></li>
+            <li class="navbtn"><a href="./googleapi.html">Places Affected</a></li>
+            <li class="navbtn"><a href="./donate.html">Donate</a></li>
+            <li class="navbtn"><a href="./">Blog</a></li>
+            <li class="navbtn"><a href="./AboutUs.html">Meet the Team</a></li>
           </ul>
         </div>
       </nav>
