--- a/finalproject.html
+++ b/finalproject.html
@@ -8,6 +8,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=3">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <link rel="stylesheet" href="navbar.css" />
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
@@ -46,29 +47,6 @@
      margin-bottom: 0px
 
     }
-    .navbtn{
-      outline: none;
-      margin-left:100px;
-      margin-top: 15px;
-      font-size: 20px;
-      position: absolute; right:60; bottom: 4px;
-     font-family:serif;
-      outline: none;}
-      .navbtn:hover{font-size: 25px;}
-    }
-    .navbar{
-      outline: none;
-      border: none;
-      position: fixed;
-
-    }
-    .navbar-brand{
-      font-size: 25px;
-      font-family:serif;
-       margin-top: 14px;
-       margin-left: 14px;
-
-    }
 
    .myslides{
      {
@@ -94,22 +72,20 @@
 </body>
 </html>
 <body id= "BG">
-<nav id= "nav">
-<nav class="navbar navbar-inverse">
-  <div class="container-fluid">
-    <div class="navbar-header" style="margin-left:70px;">
-      <a class="navbar-brand" href="#" stlye="position:fixed" >Home</a>
-    </div>
-    <ul class="nav navbar-nav" stlye="position:fixed" >
-      <li class="navbtn"><a href="./issues/gwcindex.html">Climate Change</a></li>
-      <li class="navbtn"><a href="./googleapi.html">Google API</a></li>
-      <li class="navbtn"><a href="./donate.html">Donate</a></li>
-      <li class="navbtn"><a href="./blog.hbs">Blog</a></li>
-      <li class="navbtn"><a href="./AboutUs.html">Meet The Team</a></li>
-    </ul>
-  </div>
-</nav>
-</nav>
+  <nav id= "nav">
+    <nav class="navbar navbar-inverse">
+      <div class="container-fluid nav-center">
+        <ul class="nav navbar-nav">
+          <li class="navbtn"><a href="./finalproject.html">Home</a></li>
+          <li class="navbtn"><a href="../gwcindex.html">The Issue</a></li>
+          <li class="navbtn"><a href="./googleapi.html">Places Affected</a></li>
+          <li class="navbtn"><a href="./donate.html">Donate</a></li>
+          <li class="navbtn"><a href="./">Blog</a></li>
+          <li class="navbtn"><a href="./AboutUs.html">Meet the Team</a></li>
+        </ul>
+      </div>
+    </nav>
+  </nav>
 
 
 
