--- a/donate.html
+++ b/donate.html
@@ -31,7 +31,7 @@
       <div class="container-fluid nav-center">
         <ul class="nav navbar-nav">
           <li class="navbtn"><a href="./finalproject.html">Home</a></li>
-          <li class="navbtn"><a href="../gwcindex.html">The Issue</a></li>
+          <li class="navbtn"><a href="./issues/gwcindex.html">The Issue</a></li>
           <li class="navbtn"><a href="./googleapi.html">Places Affected</a></li>
           <li class="navbtn"><a href="./donate.html">Donate</a></li>
           <li class="navbtn"><a href="./">Blog</a></li>
