--- a/googleapi.html
+++ b/googleapi.html
@@ -18,7 +18,7 @@
       <div class="container-fluid nav-center">
         <ul class="nav navbar-nav">
           <li class="navbtn"><a href="./finalproject.html">Home</a></li>
-          <li class="navbtn"><a href="../gwcindex.html">The Issue</a></li>
+          <li class="navbtn"><a href="./issues/gwcindex.html">The Issue</a></li>
           <li class="navbtn"><a href="./googleapi.html">Places Affected</a></li>
           <li class="navbtn"><a href="./donate.html">Donate</a></li>
           <li class="navbtn"><a href="./">Blog</a></li>
@@ -34,10 +34,10 @@
     <source src="http://int.nyt.com/data/videotape/finished/2016/07/1467406560/40958_1_mm-climate-kiribati_wg_1080p-1-1280.mp4" type="video/mp4"></source>
     </video>
       <div id="videoMessage">
+        <br>
         <h1>Places Around the World Hit the Hardest by Climate Change</h1>
         <p>Video by Josh Haner</p>
       </div>
-<span class="tooltiptext">Pacific Island of Kiribati</span>
   </div>
 
 <div class ="container">
