--- a/AboutUs.html
+++ b/AboutUs.html
@@ -10,6 +10,7 @@
 
 
 <head>
+  <title> Meet the Team </title>
 <style>
 
 #issues{background-color: Transparent; border:none;
@@ -173,7 +174,7 @@ html {
           <li class="navbtn"><a href="./issues/gwcindex.html">The Issue</a></li>
           <li class="navbtn"><a href="./googleapi.html">Places Affected</a></li>
           <li class="navbtn"><a href="./donate.html">Donate</a></li>
-          <li class="navbtn"><a href="./">Blog</a></li>
+          <li class="navbtn"><a href="./blog">Blog</a></li>
           <li class="navbtn"><a href="./AboutUs.html">Meet the Team</a></li>
         </ul>
       </div>
@@ -181,11 +182,14 @@ html {
   </nav>
 
 
-<h2> <center> Meet the Team </center> </h2>
+<br>
+<br>
+<br>
 <br>
   <div class="top" align="middle">
     <div class="card">
       <img src="group.jpg" alt="Group" class="img-circle" width="760" height="610">
+      <br>
       <br>
       <p> We were inspired to create this website because we were all concerned about how climate change has negatively been affecting our planet and we wanted to draw as much awareness to the issue as possible. By creating this site we hope to inform and involve users so that together we can make a difference and stop climate change!
       <h2> About Us </center></h2>
@@ -195,14 +199,14 @@ html {
   </div>
 
   <div class="column">
-    <div class="card">
+    <div align="middle" class="card">
       <img src="shreya.jpg" alt="Shreya" class="img-circle" width="230" height="236">
       <div class="container2">
         <h2>Shreya Barua</h2>
         <p class="title">Clarkston High School</p>
-        <p>I am 17 years old and I am currently a rising senior. I really enjoy teaching, cooking and coding. I applied to Girls Who Code because I took a coding class in school and I didnt like it very much. The class consisted of only guys so I thought that changing my surroundings might make the difference. Now that I am a part of a program with more girls I can say that I am definitely more engaged, interested and involved.</p>
+        <p>I am 17 years old and currently a rising senior. I enjoy teaching, cooking and coding. I joined Girls Who Code because in my C++ class, it consisted of mostly males so I hoped that learning in a different environment would change my feelings towards computer science. Now that I am a part of the program, I'm proud to say that I am definitely interested in pursuing a career in computer science.</p>
         <div class="container2">
-        <p> Contact Me: shreyabarua2@gmail.com </p>
+        <p> Contact Me: <br> shreyabarua2@gmail.com </p>
         <script type="text/javascript"></script>
         <button class="button" onclick="window.open('https://www.linkedin.com/in/shreya-barua-966769147/')" >LinkedIn</button>
         <script type="text/javascript"></script>
@@ -211,7 +215,7 @@ html {
   </div>
   </div>
   <div class="column">
-    <div class="card">
+    <div align="middle" class="card">
       <img src="nalini.jpg" alt="dog" class="img-circle" width="230" height="236">
       <div class="container2">
         <h2 width="100%">Nalini Ramdeo</h2>
@@ -227,12 +231,12 @@ html {
   </div>
   </div>
   <div class="column">
-    <div class="card">
+    <div align="middle" class="card">
       <img src="jose.jpg" alt="Josephine" class="img-circle" width="230" height="236">
       <div class="container2">
         <h2>Josephine Leung</h2>
         <p class="title">Midwood High School</p>
-        <p>I am 17 years old and currently a rising senior. I spend a lot of my time volunteering, running, and cooking. I joined Girls Who Code because I was interested in learning how to code since it was directly connected to cyber security. I thought it would be a fun and a fascinating way to expand my skills involving computer science so I would be able to use it in a variety of applications.</p>
+        <p>I am 17 years old and currently a rising senior. I spend a lot of my time volunteering, running, and cooking. I joined Girls Who Code because computers have always been fascinating to me. I realized how dependent we are on technology, which sparked my interest for computer science, particulary cyber security. This program is a great way to further develop my computer science skills.</p>
         <div>
         <p> Contact Me: josephineleung123@gmail.com</p>
          <script type="text/javascript"></script>
@@ -244,14 +248,14 @@ html {
 </div>
 <div class="row">
   <div class="column">
-    <div class="card">
+    <div align="middle" class="card">
       <img src="bella.jpg" alt="Bella" class="img-circle" width="230" height="236">
       <div class="container2">
         <h2>Bella Achu</h2>
         <p class="title">Fiorello H. LaGuardia High School</p>
-        <p>I am 16 years old and right now I am a sophmore. My favorite things to do include singing, dancing, acting, modeling, running, and playing the piano and alto sax. I really wanted to be a part of the Girls Who Code sisterhood because I saw it as a great oppportunity to learn something new and expand my horizons. I had no coding experience prior to this and i really wanted to experience something apart from what i was used to. </p>
+        <p>I am 16 years old and I am currently a rising junior. My hobbies include singing, dancing, acting, modeling, running, and playing the piano and the alto saxophone. I joined Girls Who Code because it was a great opportunity to augment my comprehension of coding and broaden my horizons. This program enabled me to have a new outlook on life by virtue of the knowledge I gained about  computer science.</p>
          <div class="container2">
-         <p> Contact Me: bellaachu23@gmail.com </p>
+         <p> Contact Me: <br>  bellaachu23@gmail.com </p>
          <script type="text/javascript"></script>
         <button class="button" onclick="window.open('https://www.linkedin.com/in/bella-achu-571a89146/')" >LinkedIn</button>
         <script type="text/javascript"></script>
