--- a/donate.html
+++ b/donate.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+  <title> Get Involved </title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=3">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -34,7 +35,7 @@
           <li class="navbtn"><a href="./issues/gwcindex.html">The Issue</a></li>
           <li class="navbtn"><a href="./googleapi.html">Places Affected</a></li>
           <li class="navbtn"><a href="./donate.html">Donate</a></li>
-          <li class="navbtn"><a href="./">Blog</a></li>
+          <li class="navbtn"><a href="./blog">Blog</a></li>
           <li class="navbtn"><a href="./AboutUs.html">Meet the Team</a></li>
         </ul>
       </div>
@@ -51,7 +52,7 @@
 <table style="width:100%">
   <tr>
     <th>Organization</th>
-    <th>About</th>
+    <th> <center> About </center> </th>
     <th></th>
   </tr>
 
