--- a/googleapi.html
+++ b/googleapi.html
@@ -2,6 +2,7 @@
 <html>
 <link href="googleapi.css" rel="stylesheet">
 <head>
+  <title> Places Affected </title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=3">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -21,7 +22,7 @@
           <li class="navbtn"><a href="./issues/gwcindex.html">The Issue</a></li>
           <li class="navbtn"><a href="./googleapi.html">Places Affected</a></li>
           <li class="navbtn"><a href="./donate.html">Donate</a></li>
-          <li class="navbtn"><a href="./">Blog</a></li>
+          <li class="navbtn"><a href="./blog">Blog</a></li>
           <li class="navbtn"><a href="./AboutUs.html">Meet the Team</a></li>
         </ul>
       </div>
