--- a/finalproject.html
+++ b/finalproject.html
@@ -80,7 +80,7 @@
           <li class="navbtn"><a href="./issues/gwcindex.html">The Issue</a></li>
           <li class="navbtn"><a href="./googleapi.html">Places Affected</a></li>
           <li class="navbtn"><a href="./donate.html">Donate</a></li>
-          <li class="navbtn"><a href="./">Blog</a></li>
+          <li class="navbtn"><a href="./blog">Blog</a></li>
           <li class="navbtn"><a href="./AboutUs.html">Meet the Team</a></li>
         </ul>
       </div>
@@ -95,7 +95,6 @@
 </iframe>
 <img class="mySlides" src="NASA.png"  style="width:100%">
 <img class="mySlides" src="fire.jpg" style="width:100%">
-<img class="mySlides" src="ice.jpg" style="width:100%">
 
 
 <button class="w3-button w3-black w3-display-left" onclick="plusDivs(-1)">&#10094;</button>
