--- a/issues/gwcindex.html
+++ b/issues/gwcindex.html
@@ -25,7 +25,7 @@
             <li class="navbtn"><a href="./issues/gwcindex.html">The Issue</a></li>
             <li class="navbtn"><a href="../googleapi.html">Places Affected</a></li>
             <li class="navbtn"><a href="../donate.html">Donate</a></li>
-            <li class="navbtn"><a href="../">Blog</a></li>
+            <li class="navbtn"><a href="./blog">Blog</a></li>
             <li class="navbtn"><a href="../AboutUs.html">Meet the Team</a></li>
           </ul>
         </div>
