--- a/AboutUs.html
+++ b/AboutUs.html
@@ -203,7 +203,7 @@ html {
       <img src="shreya.jpg" alt="Shreya" class="img-circle" width="230" height="236">
       <div class="container2">
         <h2>Shreya Barua</h2>
-        <p class="title">Clarkston High School</p>
+        <p class="title">Clarkstown South High School</p>
         <p>I am 17 years old and currently a rising senior. I enjoy teaching, cooking and coding. I joined Girls Who Code because in my C++ class, it consisted of mostly males so I hoped that learning in a different environment would change my feelings towards computer science. Now that I am a part of the program, I'm proud to say that I am definitely interested in pursuing a career in computer science.</p>
         <div class="container2">
         <p> Contact Me: <br> shreyabarua2@gmail.com </p>
@@ -240,7 +240,7 @@ html {
         <div>
         <p> Contact Me: josephineleung123@gmail.com</p>
          <script type="text/javascript"></script>
-        <button class="button" onclick="window.open('https://www.linkedin.com/in/nalini-r-86b142122/')" >LinkedIn</button>
+        <button class="button" onclick="window.open('https://www.linkedin.com/in/josephine-leung-b10284146/')" >LinkedIn</button>
         <script type="text/javascript"></script>
       </div>
     </div>
